fixtures/frontend/milestone-2/valid/noninteger-literals/main.aivi
value pi:Float = 3.14
value amount:Decimal = 19.25d
value whole:Decimal = 19d
value count:BigInt = 123n

export pi
