fixtures/frontend/milestone-2/invalid/noninteger-literal-type-mismatch/main.aivi
value pi:Float = 19.25d
value amount:Decimal = 3.14
value count:BigInt = 42
